# HobbyFi

./: .dockerignore  .gitignore  DEMO_SCRIPT.md  Dockerfile  README.md  SPEC.md  bash.exe.stackdump  plan.md  pytest.ini
.github/workflows/: main_hobbify.yml  main_hobbifycopilot.yml
apps/copilot-api/: .env.example  .pre-commit-config.yaml  Default  check_data.py  check_tables.py  pyproject.toml  requirements.txt  test_db.py
apps/copilot-api/app/: __init__.py  config.py  deps.py  main.py  observability.py
apps/copilot-api/app/agent/: __init__.py  crew.py  llm.py
apps/copilot-api/app/agent/tools/: __init__.py  async_bridge.py  rbac.py  read_tools.py  registry.py  write_tools.py
apps/copilot-api/app/api/: rate_limiter.py
apps/copilot-api/app/api/middleware/: request_id.py
apps/copilot-api/app/api/routes/: health.py  proposals.py  sessions.py  utility.py
apps/copilot-api/app/db/: session.py  sync_session.py
apps/copilot-api/app/domain/: __init__.py  models.py  schemas.py  seed.py
apps/copilot-api/app/domain/repos/: __init__.py  games.py  memberships.py  revenue.py  users.py
apps/copilot-api/app/services/: __init__.py  approval_service.py  chat_service.py  proposal_expiry.py
apps/frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/frontend-demo/: app.js  index.html  styles.css
apps/frontend/src/: App.tsx  index.css
apps/frontend/src/api/: client.ts
apps/frontend/src/components/: ActivityFeed.tsx  ChatMessage.tsx  DataTable.tsx  KpiCard.tsx  ProposalCard.tsx  Sidebar.tsx  StatusBadge.tsx
apps/frontend/src/config/: tenants.ts
apps/frontend/src/data/: mockData.ts
apps/frontend/src/lib/: mappers.ts
apps/frontend/src/pages/: AuditPage.tsx  CopilotPage.tsx  ProposalsPage.tsx  SettingsPage.tsx
apps/frontend/src/store/: useStore.ts
apps/frontend/src/types/: index.ts
tests/: conftest.py  test_phase0.py  test_phase1_chat.py  test_phase1_tools.py  test_phase2_approvals.py  test_phase3_golden_eval.py
