[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hobbyfi-copilot-api"
version = "0.1.0"
description = "HobbyFi Vendor Copilot API - FastAPI backend for vendor portal"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sachin Goyal", email = "sachin.goyal@example.com"}
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=22.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
    # Phase 1 — agent stack
    "crewai>=0.80.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "google-generativeai>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]
dev-tools = [
    "ipython>=8.25.0",
    "ipdb>=0.13.13",
    "httpie>=3.2.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/hobbyfi"
Repository = "https://github.com/yourusername/hobbyfi"
Documentation = "https://github.com/yourusername/hobbyfi/docs"
Issues = "https://github.com/yourusername/hobbyfi/issues"

[project.scripts]
copilot-api = "app.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-dir]
"" = "."

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "ipython>=8.25.0",
    "ipdb>=0.13.13",
    "httpie>=3.2.0",
]

[tool.uv.sources]
# Use local path for development
# hobbyfi-copilot-api = {path = ".", editable = true}

[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "T20", # flake8-print
]
ignore = [
    "E501",  # line too long (handled by line-length)
    "B008",  # function calls in default args (sometimes needed for Depends)
    "S101",  # assert used (common in tests)
    "T201",  # print (allowed in dev scripts)
]
exclude = [
    ".venv",
    ".venv/**",
    "dist",
    "build",
    "*.egg-info",
    ".ruff_cache",
    ".mypy_cache",
    ".pytest_cache",
    "copilot_mock.db",
    "copilot_mock.db-*",
    "*.db",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
indent-width = 4
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["app"]
known-third-party = [
    "fastapi",
    "uvicorn",
    "gunicorn",
    "pydantic",
    "pydantic_settings",
    "sqlalchemy",
    "aiosqlite",
    "asyncpg",
    "httpx",
    "sse_starlette",
    "crewai",
    "langchain",
    "langchain_core",
    "langchain_google_genai",
    "google.generativeai",
    "pytest",
    "pytest_asyncio",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
namespace_packages = true
explicit_package_bases = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.*"
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "app"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "db: Tests requiring database",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*_test.py",
    "*/migrations/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.pre-commit-hooks]
# Run with: pre-commit install && pre-commit run --all-files
# See .pre-commit-config.yaml for hook definitions

[tool.fastapi]
entrypoint = "app.main:app"